# kanben

./: Cargo.toml  README.md  autocomplete.sh
src/: archive.rs  board.rs  commands.rs  editor.rs  file.rs  main.rs  opts.rs  store.rs  test.rs  web.rs
src/commands/: backup.rs  edit.rs  list.rs  now.rs  reindex.rs  standard_actions.rs  tag.rs  view.rs
src/test/: archive.rs  board.rs  editor.rs  file.rs  store.rs  web.rs
src/web/: client.rs
web/: handler.js  package-lock.json  serverless.yml
