[package]
name = "kanben"
version = "0.1.0"
authors = ["Ben Brunton <benbrunton@hotmail.com>"]
edition = "2018"
description = "kanban for the terminal"
license = "the unlicense"
repository = "https://github.com/benbrunton/kanben/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
kv = { version = "0.20.2", features = ["json-value"] }
dirs = "2.0.2"
libmath = "0.2.1"
colored = "1.9"
termimad = "0.5"
