[package]
name = "kanben"
version = "0.1.3"
authors = ["Ben Brunton <benbrunton@hotmail.com>"]
edition = "2018"
description = "kanban for the terminal"
license = "MIT"
repository = "https://github.com/benbrunton/kanben/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
kv = { version = "0.20.2", features = ["json-value"] }
dirs = "2.0.2"
libmath = "0.2.1"
colored = "1.9"
termimad = "0.5"
reqwest = { version= "0.10.6", features = ["blocking", "json"] }
zip = "0.5.6"
log = "0.4"
flexi_logger = { version = "0.15", default_features = false }
fs_extra = "1.1.0"
walkdir = "2"
